line 718 bort kommentera, /*-webkit-line-clamp: 2; */

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -778,7 +778,7 @@ textarea:focus {
   font-weight: 700;
   margin-bottom: 8px;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  /*-webkit-line-clamp: 2; */
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
